# multi-agent-ai-system

./: .env.example  .gitignore  README.md  SETUP.md  launcher.py  pyproject.toml
examples/: 01_simple_chat.py  02_tool_calling.py  03_langgraph_team.py  04_autogen_team.py  05_memory_demo.py  06_rag_example.py  07_mcp_example.py  08_a2a_example.py  debug_rag.py
src/multi_agent/: __init__.py
src/multi_agent/autogen_agents/: __init__.py  agents.py  team.py
src/multi_agent/langgraph_agents/: __init__.py  graph.py  nodes.py
src/multi_agent/shared/: __init__.py  a2a.py  config.py  llm_factory.py  mcp.py  memory.py  rag.py
src/multi_agent/tools/: __init__.py  base.py  common_tools.py
tests/: __init__.py  test_memory.py  test_providers.py  test_tools.py
