[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi-Agent AI System with LangGraph and AutoGen - Educational Project with Local and Remote LLM Support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM Providers
    "ollama>=0.4.0",
    "openai>=1.50.0",
    
    # LangGraph Stack
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    
    # AutoGen
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai,ollama]>=0.4.0",
    
    # Core utilities
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    
    # Memory & RAG (optional but useful)
    "chromadb>=0.5.0",
    
    # A2A Protocol (HTTP server/client)
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
